--- a/src/App.css
+++ b/src/App.css
@@ -6,12 +6,20 @@
   width: 200px;
   float: left;
   background-color: darkgray;
+  margin-top:10vh;
 }
 
 #map {
   margin-left: 200px;
 }
-
+.search__bar {
+  width:100%;
+  min-height:50px;
+  padding:20px 0;
+  background-color: red;
+  border:none;
+  font-size:2em;
+}
 .locations__list {
   list-style-type: none;
   padding-left:5px;
