--- a/src/components/listItem.css
+++ b/src/components/listItem.css
@@ -1,4 +1,23 @@
 .list__item {
     display:block;
     padding:10px 15px;
+    background-color: rgb(138, 252, 172);
+    border:2px solid whitesmoke;
+    color:rgb(46, 51, 48);
+}
+.list__item:hover {
+    background-color: rgb(52, 89, 63);
+    color:rgb(204, 204, 204);
+}
+
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+    .list__item {
+        padding:2px 3px;
+        border:1px solid whitesmoke;
+    }
+}
+@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
+    .list__item {
+        padding:5px 7px;
+    }
 }
